--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@ nav{
   background-color: #f2f2f2;
 }
 
+li{
+  list-style-type: none;
+}
+
 ul{
   margin:0vw;
   padding:0vw;
@@ -57,6 +61,7 @@ head{
     .widetext{
       letter-spacing: .5vw;
       font-weight: bold;
+      text-transform: capitalize;
     }
     
     
@@ -64,21 +69,33 @@ head{
       width:100vw;
     }
     
-    .topimage{
-      width:100vw;
-    }
 
     .about{
       font-weight: bold;
       letter-spacing: .2vw;
     }
 
+    #meillustration{
+      float:left;
+      padding: 3vw;
+      width: 7vw;
+    }
+
+    .biotext{
+      font-weight: normal;
+      letter-spacing: 0;
+      float: left;
+    }
     
+    ul #contact{
+      list-style-type:circle;
+
+    }
     
     /*body elements*/
     /*hover elements*/
     /*if I cant find all my drawings/images, delete xtra boxes and make other pieces full screen ALSO DONT FORGET THE ZJAIDEN ART THINGY*/
-    /*
+    
     main{
       width:100vw;
       background:#f2f2f2;  
@@ -88,16 +105,21 @@ head{
       width:100vw;
       background:#f2f2f2;
     }
-    
-    #homepagetitle{
+
+    .contactinfo{
+      font-family: 'Muli', sans-serif;
+      text-decoration: none;
+    }
+
+    .titletext{
+      text-transform: uppercase;
+      font-family: 'Muli', sans-serif;
       text-align: center;
       margin: 0vw 0vw 1vw 0vw;
       font-weight: bolder;
       color: #b39a84
-    }
-    
-    .titletext{
-      font-size: 3vw;
+      font-size:3vw;
+      
     }
     
     
@@ -142,6 +164,14 @@ head{
       text-align: center;
     }
     
+
+    .tweets{
+      padding: 5vw;
+      float: center;
+    }
+  
+   
+
     #fbox1{
       float:left;
     }
@@ -180,4 +210,4 @@ head{
     #fbox9{
       float:right;
     }
-    *//
+    
